--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="eng">
 <head>
      <title>Hello</title>
+	 <style>
+	     h1 {
+		  color: blue;
+		 }
+	 </style>
 </head>
 <body>
   Hello, world!
